--- a/package.json
+++ b/package.json
@@ -21,11 +21,25 @@
     "fallback"
   ],
   "xo": {
+    "ignore": [
+      "./index.test-d.ts"
+    ],
     "rules": {
-      "require-yield": [0],
-      "unicorn/no-reduce": [0],
-      "no-await-in-loop": [0],
-      "operator-linebreak": [0]
+      "require-yield": [
+        0
+      ],
+      "unicorn/no-reduce": [
+        0
+      ],
+      "no-await-in-loop": [
+        0
+      ],
+      "operator-linebreak": [
+        0
+      ],
+      "unicorn/prefer-module": [
+        0
+      ]
     }
   },
   "author": "Josh Junon (https://github.com/qix-)",
@@ -33,6 +47,6 @@
   "devDependencies": {
     "@zeit/best": "0.7.3",
     "tsd": "0.17.0",
-    "xo": "0.32.1"
+    "xo": "0.44.0"
   }
 }
